[package]
name = "typeflow-engine"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]

[dependencies]
boolinator = "2.4.0"
itertools = "0.7.8"
either = "1.5.0"
slog = "2.3.2"
slog-stdlog = "3.0.2"

[dev-dependencies]
slog-term = "2.4.0"
# Uncomment to see trace output from tests.
# slog = { version = "2.3.2", features = ["max_level_trace"] }
